# SiML

./: .gitignore  CMakeLists.txt  CMakePresets.json  Config.cmake.in  Doxyfile  README.md
cmake/: Dependencies.cmake  InstallConfig.cmake  Tests.cmake
cmake_files/: installation_rules.cmake  objects.in.cmake
docs/: mainpage.dox
include/: loss_function.hpp  model.hpp  optimizer.hpp  printing.hpp  template_instantiator.hpp  temporary.hpp
src/: CMakeLists.txt  linear_regression.cpp  loss_function.cpp  model.cpp  optimizer.cpp  printing.cpp  temporary.cpp
tests/: test_Gradient_Descent_optimizer.cpp  test_MSE_loss_function.cpp  test_linear_regression.cpp  test_linear_regression_model.cpp  test_temporary.cpp
